; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_interrupt.c_vlc_recvmsg_i11e.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_interrupt.c_vlc_recvmsg_i11e.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msghdr = type { i32 }
%struct.pollfd = type { i32, i32 }

@POLLIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_recvmsg_i11e(i32 %0, %struct.msghdr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.msghdr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.pollfd, align 4
  store i32 %0, i32* %5, align 4
  store %struct.msghdr* %1, %struct.msghdr** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %8, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @POLLIN, align 4
  %12 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %8, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = call i64 @vlc_poll_i11e(%struct.pollfd* %8, i32 1, i32 -1)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %21

16:                                               ; preds = %3
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.msghdr*, %struct.msghdr** %6, align 8
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @recvmsg(i32 %17, %struct.msghdr* %18, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %16, %15
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i64 @vlc_poll_i11e(%struct.pollfd*, i32, i32) #1

declare dso_local i32 @recvmsg(i32, %struct.msghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
